Minor alignment fixes

--- a/src/style/abstracts/_helpers.scss
+++ b/src/style/abstracts/_helpers.scss
@@ -30,7 +30,7 @@ button.custom, a.custom {
   padding: 24px 0;
 }
 .block {
-  display: block;
+  display: block!important;
 }
 
 .mt-0 {
